<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.adam.popularmoviesstage2.MainActivity">
    <item
        android:id="@string/pref_sort_popular_desc_key"
        android:checkable="true"
        android:checked="true"
        android:title="Popular"
        app:showAsAction="never" />
    <item
        android:id="@string/pref_sort_vote_avg_desc_key"
        android:checkable="true"
        android:title="Vote"
        app:showAsAction="never" />
    <item
        android:id="@string/pref_sort_favourite_desc_key"
android:checkable="true"
        android:title="Favourite"
        app:showAsAction="never" />

</menu>
